# ScanGUI

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.postgres.yml  notes.txt
config/: scangui.env.example
docs/: API_SERVER.md  REFACTORING.md  SCANGUI_GUIDE_TECHNIQUE.md  SCANGUI_GUIDE_TECHNIQUE.tex
include/: DownloadScan.hpp  Download_Scan.hpp  MainWindow.hpp  Main_Window.hpp  NewDownloadWindow.hpp  New_Download_Window.hpp  Profil.hpp  Scan.hpp  ScanSelect.hpp  Scan_Select.hpp  Window_Profil.hpp
include/application/: ApiScanDataSource.hpp  DownloadQueue.hpp  FileSystemScanDataSource.hpp  OfflineLibrarySync.hpp  ScanDataSource.hpp  ScanUpdater.hpp
include/domain/: ScanMetadata.hpp  ScanPage.hpp  ScanProgress.hpp  ScanSession.hpp
include/infrastructure/: CurlHttpClient.hpp  JsonScanRepository.hpp  LelScansProvider.hpp  SimpleJson.hpp
include/server/: HttpServer.hpp  HttpTypes.hpp  OcrIndexer.hpp  PostgresScanDatabase.hpp  ScanApiController.hpp  ScanLibraryIndexer.hpp
migrations/: 001_init.sql
server_src/: HttpServer.cpp  HttpTypes.cpp  OcrIndexer.cpp  PostgresScanDatabase.cpp  ScanApiController.cpp  ScanLibraryIndexer.cpp  main_server.cpp
src/: CurlHttpClient.cpp  DownloadScan.cpp  Download_Scan.cpp  JsonScanRepository.cpp  LelScansProvider.cpp  MainWindow.cpp  Main_Window.cpp  NewDownloadWindow.cpp  New_Download_Window.cpp  Profil.cpp  Scan.cpp  ScanSelect.cpp  ScanSession.cpp  ScanUpdater.cpp  Scan_Select.cpp  Window_Profil.cpp  main.cpp
src/application/: ApiScanDataSource.cpp  DownloadQueue.cpp  FileSystemScanDataSource.cpp  OfflineLibrarySync.cpp
tests/: run_unit_tests.cpp
web/: app.js  index.html  style.css
